# DBusSession

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/backends/: CMakeLists.txt
src/backends/dbus-getter/: CMakeLists.txt  main.c
src/backends/dbus-sender/: CMakeLists.txt  main.c
src/dbus/: alterator-backend-interactive.spec  alterator-interface-interactive.spec  interactive.backend  org.altlinux.alterator.interactive.policy  org.altlinux.alterator.interactive.xml
src/frontend/: CMakeLists.txt  main.c
